@@ -41,6 +41,16 @@ char *cgi_error(void)
 	return result;
 }
 
+int cgi_ispost()
+{
+	char *method = getenv("REQUEST_METHOD");
+	if (method && (strcasecmp(method, "POST") == 0)) {
+		cgi_method = CGI_POST; /* might as well set here */
+		return 1;
+	}
+	return 0;
+}
+
 cgidata_t *cgi_request(void)
 {
 	char *method = NULL;
@@ -267,7 +277,7 @@ char *csp_header(const char *str)
 	else if (strncmp(str, "criticaleditor", 14) == 0) csppol = strdup("script-src 'self'; connect-src 'self'; form-action 'self';");
 	else if (strncmp(str, "svcstatus-trends", 16) == 0) csppol = strdup("script-src 'self' 'unsafe-inline'; connect-src 'self'; form-action 'self'; sandbox allow-forms allow-scripts;");
 	else if (strncmp(str, "svcstatus-info", 14) == 0) csppol = strdup("script-src 'self' 'unsafe-inline'; connect-src 'self'; form-action 'self'; sandbox allow-forms allow-same-origin allow-scripts allow-modals allow-popups;");
-	else if (strncmp(str, "svcstatus", 9) == 0) csppol = strdup("script-src 'self'; connect-src 'self'; form-action 'self'; sandbox allow-forms;");
+	else if (strncmp(str, "svcstatus", 9) == 0) csppol = strdup("script-src 'self'; connect-src 'self'; form-action 'self'; sandbox allow-forms allow-same-origin;");
 	else if (strncmp(str, "historylog", 10) == 0) csppol = strdup("script-src 'self'; connect-src 'self'; form-action 'self'; sandbox allow-forms;");
 	else {
 		errprintf(" csp_header: page %s not listed, no CSP returned\n", str);
