@@ -391,7 +391,7 @@ int main(int argc, char *argv[])
 	redirect_cgilog("criticaleditor");
 
         /* We only want to accept posts from certain pages */
-	{
+	if (cgi_ispost()) {
 		char cgisource[1024]; char *p;
 		p = csp_header("criticaleditor"); if (p) fprintf(stdout, "%s", p);
 		snprintf(cgisource, sizeof(cgisource), "%s/%s", xgetenv("SECURECGIBINURL"), "criticaleditor");
