@@ -4,6 +4,10 @@ xymon (4.3.27) stable; urgency=medium
 
    * Don't treat empty (0 byte) directory size as invalid    
      (Reported by Bert Willekens)
+   * Fix looping redirect on criticaleditor.sh
+   * Allow NK-critical acknowledgements from status pages
+   * Fix redirect to criticalview.sh, which is just a
+     regular CGI
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  XXX, XX Mar 2016 15:00:00 -0800
 
