@@ -5,6 +5,10 @@ Changes from 4.3.26 -> 4.3.27 (XX Mar 2016)
 
 * Don't treat empty (0 byte) directory size as invalid 
   (Reported by Bert Willekens)
+* Fix looping redirect on criticaleditor.sh
+* Allow NK-critical acknowledgements from status pages
+* Fix redirect to criticalview.sh, which is just a
+  regular CGI
 
 
 Changes from 4.3.25 -> 4.3.26 (19 Feb 2016)
